--- a/addons/adb_server/Dockerfile
+++ b/addons/adb_server/Dockerfile
@@ -4,8 +4,10 @@ FROM ${BUILD_FROM}
 
 # Install necessary packages and wget for downloading tini
 RUN apt-get update && \
-    apt-get install -y android-sdk-platform-tools wget bash build-essential cmake git libjson-c-dev libwebsockets-dev dos2unix && \
-    rm -rf /var/lib/apt/lists/* && \
+    apt-get install -y unzip wget bash build-essential cmake git libjson-c-dev libwebsockets-dev dos2unix && \
+    rm -rf /var/lib/apt/lists/* && \ 
+    wget https://dl.google.com/android/repository/platform-tools-latest-linux.zip && \
+    unzip platform-tools-latest-linux.zip && \
     git clone https://github.com/tsl0922/ttyd.git
 
 
